crates/backyard-lexer/tests/snapshots/keywords__declare_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Declare
  value:
    - 100
    - 101
    - 99
    - 108
    - 97
    - 114
    - 101
  line: 1
  column: 0
  offset: 0
