crates/backyard-lexer/tests/snapshots/keywords__default_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 66
expression: tokens
snapshot_kind: text
---
- token_type: Default
  value: default
  line: 1
  column: 0
  offset: 0
