crates/backyard-lexer/tests/snapshots/keywords__die_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Die
  value:
    - 100
    - 105
    - 101
  line: 1
  column: 0
  offset: 0
