crates/backyard-lexer/tests/snapshots/keywords__do_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 71
expression: tokens
snapshot_kind: text
---
- token_type: Do
  value: do
  line: 1
  column: 0
  offset: 0
