crates/backyard-lexer/tests/snapshots/keywords__echo_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Echo
  value:
    - 101
    - 99
    - 104
    - 111
  line: 1
  column: 0
  offset: 0
