crates/backyard-lexer/tests/snapshots/keywords__else_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Else
  value:
    - 101
    - 108
    - 115
    - 101
  line: 1
  column: 0
  offset: 0
