crates/backyard-lexer/tests/snapshots/keywords__endfor_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 96
expression: tokens
snapshot_kind: text
---
- token_type: EndFor
  value: endfor
  line: 1
  column: 0
  offset: 0
