crates/backyard-lexer/tests/snapshots/keywords__endforeach_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 101
expression: tokens
snapshot_kind: text
---
- token_type: EndForeach
  value: endforeach
  line: 1
  column: 0
  offset: 0
