crates/backyard-lexer/tests/snapshots/keywords__endif_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: EndIf
  value:
    - 101
    - 110
    - 100
    - 105
    - 102
  line: 1
  column: 0
  offset: 0
