crates/backyard-lexer/tests/snapshots/keywords__endswitch_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: EndSwitch
  value:
    - 101
    - 110
    - 100
    - 115
    - 119
    - 105
    - 116
    - 99
    - 104
  line: 1
  column: 0
  offset: 0
